visualisation: fix overflow scrolling in Chrome

--- a/src/main/resources/jcprofiler/visualisation/template.css
+++ b/src/main/resources/jcprofiler/visualisation/template.css
@@ -74,7 +74,7 @@
 
 #codeWithTraps, #codeWithoutTraps {
     flex: 1;
-    overflow: scroll;
+    overflow-x: auto;
 }
 
 #codeWithTraps, #graphHelp {
